# src/users/userRoute.js
@@ -4,7 +4,7 @@ const {
   verifyAccessToken,
   checkRole,
 } = require("../../middlewares/verifyToken");
-
+const { upload } = require("../../config/cloudinaryConfig");
 router.post("/login", userController.loginUser);
 
 router.get("/logout", userController.logoutUser);
@@ -13,6 +13,7 @@ router.post(
   "/add-user",
   verifyAccessToken,
   checkRole("ADMIN"),
+  upload.single("avatar"),
   userController.createNewUser
 );
 router.put(
